# llm-benchmarking-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.artemis_build/: benchmark.sh  build.sh  test.sh  var.sh
artemis_scripts/: benchmark.sh  build.sh  clean.sh  test.sh  variables.sh
src/: CMakeLists.txt  libquantlib.cc  main.cc  ql.cc  windows.cc
src/algorithms/: CMakeLists.txt  primes.cc  primes.h  primes.md  sort.cc  sort.h  sort.md
src/control/: CMakeLists.txt  double.cc  double.h  double.md  single.cc  single.h  single.md
src/datastructures/: CMakeLists.txt  dlist.cc  dlist.h  linkedlist.cc  linkedlist.h  linkedlist.md  list.cc  list.h  vector.cc  vector.h
src/generator/: CMakeLists.txt  genarray.cc  genarray.h  genlist.cc  genlist.h  genstring.cc  genstring.h  genvector.cc  genvector.h
src/libraries/: CMakeLists.txt  quantlib.cc  quantlib.h
src/math/: CMakeLists.txt  matrixalgebra.cc  matrixalgebra.h  matrixalgebra.md  simulation.cc  simulation.h  simulation.md  vectoralgebra.cc  vectoralgebra.h  vectoralgebra.md
src/os/: CMakeLists.txt  dataio.cc  dataio.h  winheader.cc  winheader.h
src/strings/: CMakeLists.txt  generator.cc  generator.h  palindrome.cc  palindrome.h  reverse.cc  reverse.h  strarray.h  strops.cc  strops.h
src/testhelpers/: CMakeLists.txt  testervector.h
tests/: CMakeLists.txt  test.cc  test_double.cc  test_single.cc
tests/algorithms/: test_primes.cc  test_sort.cc
tests/control/: test_double.cc  test_single.cc
tests/datastructures/: test_linkedlist.cc  test_list.cc  test_vector.cc
tests/libraries/: test_quantlib.cc
tests/math/: test_matrixalgebra.cc  test_simulation.cc  test_vectoralgebra.cc
